Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="esecurity-" class="anchor" href="#esecurity-"><span class="octicon octicon-link"></span></a>esecurity <a href="http://travis-ci.org/math-nao/esecurity"><img src="https://secure.travis-ci.org/math-nao/esecurity.png" alt="Build Status"></a>
+<a name="esecurity--" class="anchor" href="#esecurity--"><span class="octicon octicon-link"></span></a>esecurity <a href="http://travis-ci.org/math-nao/esecurity"><img src="https://secure.travis-ci.org/math-nao/esecurity.png" alt="Build Status"></a> <a href="http://badge.fury.io/js/esecurity"><img src="https://badge.fury.io/js/esecurity.svg" alt="NPM version"></a>
 </h1>
 
 <p>Security middlewares for express framework (xsrf, xss, clickjacking...).</p>
@@ -616,8 +616,6 @@ $ npm install
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p>MIT</p>
-
-<p><a href="https://bitdeli.com/free" title="Bitdeli Badge"><img src="https://d2weczhvl823v0.cloudfront.net/math-nao/esecurity/trend.png" alt="Bitdeli Badge"></a></p>
       </section>
     </div>
 
